<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="Titulo">Aprenda sobre edição de imagens</string>
    <string name="data">10/05/2030</string>
    <string name="Autor">Eric Giobini Micaela</string>
    <string name="BotaoA">Anterior</string>
    <string name="BotaoP">Proximo</string>
    <string name="texto">Que você seja alegre mesmo quando vier a chorar.
Que você seja sempre jovem, mesmo quando o tempo passar.
Que você tenha esperança, mesmo quando o sol não nascer.
Que você ame seus íntimos, mesmo quando sofrer frustrações.
Que você jamais deixe de sonhar, mesmo quando vier a fracassar.
Isso é ser feliz.
Que através deste livro você garimpe ouro dentro de si mesmo.
E seja sempre apaixonado pela vida.
E descubra que você é um ser humano especial.</string>


</resources>
